--- a/http-proxy.cabal
+++ b/http-proxy.cabal
@@ -27,26 +27,27 @@ Description:
 
 Library
   Build-Depends:     base                    >= 4           && < 5
-                   , async                   >= 2.0
-                   , blaze-builder           >= 0.4
-                   , bytestring              >= 0.10
-                   , bytestring-lexing       >= 0.4
-                   , case-insensitive        >= 1.2
-                   , conduit                 >= 1.2
-                   , conduit-extra           >= 1.1
-                   , http-client             >= 0.5         && < 0.6
-                   , http-conduit            >= 2.2         && < 2.3
-                   , http-types              >= 0.8
-                   , mtl                     >= 2.1
-                   , network                 >= 2.6
-                   , resourcet               >= 1.1
-                   , tls                     >= 1.2
-                   , text                    >= 1.2
-                   , transformers            >= 0.3
-                   , wai                     >= 3.2
-                   , wai-conduit             >= 3.0
-                   , warp                    >= 3.0
-                   , warp-tls                >= 3.0
+                   , async
+                   , blaze-builder
+                   , bytestring
+                   , bytestring-lexing
+                   , case-insensitive
+                   , conduit
+                   , conduit-extra
+                   , http-client
+                   , http-conduit
+                   , http-types
+                   , mtl
+                   , network
+                   , resourcet
+                   , tls
+                   , text
+                   , transformers
+                   , wai
+                   , wai-extra
+                   , wai-conduit
+                   , warp
+                   , warp-tls
 
   Exposed-modules:   Network.HTTP.Proxy
   Other-modules:     Network.HTTP.Proxy.Request
